# bilevelpy

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  generate_api_docs.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  conventions.md  index.md  installation.md  tutorial.md
docs/examples/: full_pipeline.py
docs/guides/: datasets.md  full_pipeline.md  models.md  solving.md
src/bilevelpy/: __init__.py
src/bilevelpy/benchmarks/: __init__.py  abstract_refreshing_service.py  config.py  logging.py  protocols.py  runner.py
src/bilevelpy/core/: __init__.py  columns.py  datasets.py
src/bilevelpy/data/: __init__.py  base_processor.py  builder.py  core.py  loaders.py  processor.py
src/bilevelpy/data/datasets/: cab100.txt  cab25.txt
src/bilevelpy/models/: __init__.py  core.py  meta.py  utils.py
src/bilevelpy/models/constraints/: __init__.py  core.py  hlp_constraints.py
src/bilevelpy/models/vars/: __init__.py  core.py  hlp_vars.py
src/bilevelpy/solution/: __init__.py  core.py  solution_registry.py  utils.py
src/bilevelpy/solver/: __init__.py  solver.py
tests/bilevelpy/data/: test_builder.py  test_entity_store.py  test_loaders.py  test_processor.py
tests/bilevelpy/models/: test_base_model.py  test_meta.py
tests/bilevelpy/models/constraints/: test_constraint_base.py  test_hlp_constraints.py
tests/bilevelpy/models/vars/: test_hlp_vars.py  test_variable_base.py
tests/bilevelpy/solution/: test_solution_metadata.py  test_utils.py
tests/bilevelpy/solver/: test_solver.py
