[tool.poetry]
name = "bilevelpy"
version = "0.1.0"
description = "An extensible Python framework for building, solving, and evaluating Gurobi-based optimization models."
authors = ["Amine Bahij <contact@amine-bahij.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "bilevelpy", from = "src"}]
keywords = ["optimization", "hub-location", "operations-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
gurobipy = ">=11.0"
pandas = "*"
numpy = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
poethepoet = "*"

[tool.coverage.run]
omit = ["src/bilevelpy/benchmarks/*"]

[tool.poe.tasks]
test = "pytest"
test-cov = "pytest --cov=bilevelpy"
docs = "mkdocs serve"
docs-build = "mkdocs build"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
pymdown-extensions = "*"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"
mkdocs-section-index = "*"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"